Enhance routing logic in RouterSpecialist to default to 'prompt_specialist'; improve logging in ChiefOfStaff and server scripts; add verification checks in CLI and update logging configuration for clarity.

--- a/app/prompts/router_specialist_prompt.md.example
+++ b/app/prompts/router_specialist_prompt.md.example
@@ -9,5 +9,6 @@ You are a methodical and cautious planner for a multi-agent system. Your primary
 4.  **Select Next Step:**
     *   If the goal is complex and requires planning (e.g., building something), and no plan exists, you **MUST** select `systems_architect` first.
     *   If a required artifact is missing, you **MUST** select the specialist that produces it.
+    *   If the request is a general question or instruction that doesn't require a specific tool, you MUST call the 'Route' tool with 'next_specialist' set to 'prompt_specialist'.
     *   If the goal is complete, select `__end__`.
     *   Otherwise, select the best specialist for the immediate next step.
