--- a/config.yaml.example
+++ b/config.yaml.example
@@ -57,9 +57,9 @@ specialists:
     provider: "gemini"
 
   file_specialist:
-    prompt_file: "file_specialist_prompt.md"
-    description: "A specialist that uses tools to interact with the filesystem (read, write, list)."
-    # This model must be capable of tool/function calling.
+    prompt_file: "file_specialist_pydantic_prompt.md" # Use a prompt designed for Pydantic/JSON schema output.
+    description: "A specialist that uses a Pydantic schema to interact with the filesystem (read, list)."
+    # This model must be good at generating structured JSON.
     api_identifier: "gemini-2.5-flash"
     provider: "gemini"
     root_dir: "./workspace" # Defaults to a 'workspace' folder in the project root.
@@ -84,7 +84,7 @@ specialists:
   text_analysis_specialist:
     api_identifier: "gemini-2.5-flash"
     provider: "gemini"
-    prompt_file: text_analysis_prompt.md
+    prompt_file: "text_analysis_prompt.md"
     description: "Analyzes, summarizes, or extracts information from a block of text. Use this after text has been retrieved by another specialist."
     
   # --- General & Fallback ---
@@ -98,6 +98,7 @@ specialists:
   open_swe_specialist:
     type: wrapped
     source: "./external_agents/open_swe/run.py" # Relative path from project root
+    class_name: "Agent" # The name of the class to instantiate from the source file.
     description: "A specialist that wraps the open-swe agent for software engineering tasks."
 
   archiver_specialist:
