Checkpoint: working on Router functionality. Refactor specialist recommendations and configuration handling.
- Updated SystemsArchitect and TextAnalysisSpecialist to use "recommended_specialists" instead of "next_specialist" and "suggested_next_specialist" respectively.
- Enhanced ConfigLoader to validate and filter specialist configurations, ensuring only valid specialists are included in the final configuration.
- Modified UserSettings schema to allow optional specialist model bindings.
- Improved ChiefOfStaff to validate entry points against loaded specialists and log appropriate messages.
- Updated WorkflowRunner to reflect changes in state structure, replacing "suggested_next_specialist" with "recommended_specialists".
- Adjusted config.yaml to reflect changes in specialist definitions and descriptions.
- Enhanced documentation on creating new specialists and advanced patterns for robustness.
- Added adapters_helpers.py for formatting messages for Gemini and OpenAI APIs.
- Updated installation and verification scripts to include user_settings.yaml.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ backups/
 build/
 logs/
 *.bak
+docs/adr/private/*
 app/src/ui/*
 
 # --- External Code ---
@@ -46,5 +47,6 @@ runverify.sh
 # --- "Safety" Lock for Real Filesystem Changes ---
 .agent_safety_off.lock
 workspace/*
+
 
 Dockerfile
