Checkpoint: clearing unit tests. - Refactor specialists and enhance workflow logic. - Updated SystemsArchitect to include contextual messages from other specialists and improved state updates. - Modified TextAnalysisSpecialist to remove task completion logic, allowing the router to manage task flow. - Enhanced WebBuilder to support iterative refinement cycles, allowing for multiple HTML generation iterations. - Added utility package initialization files for better package structure. - Improved integration tests for live LLM interactions with Gemini and LM Studio using AdapterFactory. - Refined unit tests for various specialists, ensuring proper mocking and state management. - Updated documentation to clarify task completion and iterative refinement patterns. - Added new tests for WebBuilder to validate single and multi-cycle behaviors. - Introduced archiver_specialist for final report generation and workflow termination.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,11 @@ dev = [
 [tool.setuptools.packages.find]
 # Automatically find all packages under the 'app' directory
 where = ["app"]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "app"
+]
+markers = [
+    "live_llm: marks tests that require a live LLM connection and API keys"
+]
