Enhance archiving functionality and improve state management across specialists
- Added archiving configuration options in config.yaml for better report management.
- Updated GraphState to include new fields for archiving and web builder iteration.
- Refactored RouterSpecialist to improve handling of task completion and recommendations.
- Introduced best practices for specialists in documentation to ensure consistent state updates.
- Added environment variable support for archiving features in the setup guide.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ LMSTUDIO_BASE_URL="http://localhost:1234/v1"
 
 # Required for Ollama. The base URL for your local Ollama server.
 OLLAMA_BASE_URL="http://localhost:11434"
+
+# Overrides the default location for run reports.
+# AGENTIC_SCAFFOLD_ARCHIVER_ENABLED=false
+# AGENTIC_SCAFFOLD_ARCHIVE_PATH=/path/to/my/reports
