--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ GOOGLE_API_KEY="your-google-api-key"
 
 # Required for LM Studio. The base URL for your local LM Studio server.
 LMSTUDIO_BASE_URL="http://localhost:1234/v1"
+# LMSTUDIO_TIMEOUT=180
 
 # Required for Ollama. The base URL for your local Ollama server.
 OLLAMA_BASE_URL="http://localhost:11434"
