Refactor specialists and configuration and add WrappedSpecialist open-interpreter to demonstrate that functionality.
- Updated ConfigLoader to streamline binding logic for LLM specialists.
- Removed deprecated llm_config field from LLMSpecialistConfig.
- Renamed WrappedSpecialist to WrappedCodeSpecialist and adjusted its implementation.
- Introduced OpenInterpreterSpecialist to wrap the Open Interpreter agent.
- Updated config.yaml to reflect changes in specialist types and paths.
- Enhanced documentation for creating wrapped specialists and added examples.
- Removed obsolete test file for WrappedSpecialist.
- Updated dependencies in pyproject.toml and requirements files to include new packages.

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,10 @@ app/src/ui/*
 
 # --- External Code ---
 # Ignore contents of the external directory, but keep the directory itself.
+# We make an exception for our own Python wrapper files.
 external_agents/*
 !external_agents/.gitkeep
+!external_agents/**/*.py
 
 # --- Agent Notes ---
 docs/agent_scratchpad.md
