--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ llm_providers:
     # Uses the LMSTUDIO_BASE_URL from your .env file
     # Example: LMSTUDIO_BASE_URL=http://localhost:1234/v1
     type: "lmstudio"
-    api_identifier: "router-gpt-oss-20b" # The model identifier for the server.
+    api_identifier: "lmstudio-community/gpt-oss-20b-gguf/router-gpt-oss-20b-mxfp4.gguf" # The model identifier for the server.
     # The model's total context window (input + output). This value is used by the llm
     # adapter to proactively prune the conversation history to prevent context overflow errors.
     context_window: 4096
@@ -113,11 +113,11 @@ specialists:
     prompt_file: "web_builder_prompt.md"
     description: "Takes a 'system_plan' artifact and generates a self-contained HTML document based on it. Requires a 'system_plan' to be present in the state."
 
-  file_specialist:
-    type: "llm"
-    prompt_file: "file_specialist_prompt.md"
-    description: "Performs file system operations like read, write, and list directories using a Pydantic schema. Write operations are protected by a safety lock."
-    root_dir: "./workspace" # Defaults to a 'workspace' folder in the project root.
+  # file_specialist:
+  #   type: "llm"
+  #   prompt_file: "file_specialist_prompt.md"
+  #   description: "Performs file system operations like read, write, and list directories using a Pydantic schema. Write operations are protected by a safety lock."
+  #   root_dir: "./workspace" # Defaults to a 'workspace' folder in the project root.
 
   # --- Data & Analysis ---
   data_extractor_specialist:
@@ -143,14 +143,14 @@ specialists:
   prompt_specialist:
     type: "llm"
     prompt_file: "prompt_specialist_prompt.md"
-    description: "A general-purpose specialist for direct Q&A and instruction following. It can be bound to a simple or advanced model in user_settings.yaml."
+    description: "A general-purpose specialist for direct Q&A and instruction following. Use this as a fallback when no other specialist seems appropriate for the user's request."
 
   # --- Wrapped & External Specialists ---
-  open_swe_specialist:
-    type: "wrapped"
-    source: "./external/open-swe/agent/run.py" # Path relative to project root
-    class_name: "Agent" # The name of the class to instantiate from the source file.
-    description: "A specialist that wraps the open-swe agent for software engineering tasks."
+  open_interpreter_specialist:
+    type: "wrapped_code"
+    wrapper_path: "./external_agents/OpenInterpreter/open_interpreter_wrapper.py" # Path to the wrapper class file, relative to the project root.
+    class_name: "OpenInterpreterAgent" # The name of the class to instantiate from the source file.
+    description: "Executes shell commands and code (Python, etc.) to perform file system operations (list, read, write), data analysis, or web research. This is the primary tool for interacting with the local machine's files and running scripts."
 
   archiver_specialist:
     type: "procedural"
