Enhance specialist functionality and reporting: - Update prompt triage and systems architect prompts for improved recommendations. - Refactor GraphState to include triage recommendations and streamline state management. - Improve Gemini and LM Studio adapters for better tool call handling. - Add triage recommendations to Archiver and Prompt Triage specialists. - Refine Router specialist logic for clearer routing decisions. - Update Chief of Staff routing instructions for better task handling. - Add triage recommendations field to WorkflowRunner state. - Correct configuration for file_specialist in YAML. - Revise documentation on creating specialists and proposal for Curator Specialist.

--- a/config.yaml
+++ b/config.yaml
@@ -113,11 +113,11 @@ specialists:
     prompt_file: "web_builder_prompt.md"
     description: "Takes a 'system_plan' artifact and generates a self-contained HTML document based on it. Requires a 'system_plan' to be present in the state."
 
-  # file_specialist:
-  #   type: "llm"
-  #   prompt_file: "file_specialist_prompt.md"
-  #   description: "Performs file system operations like read, write, and list directories using a Pydantic schema. Write operations are protected by a safety lock."
-  #   root_dir: "./workspace" # Defaults to a 'workspace' folder in the project root.
+  file_specialist:
+    type: "llm"
+    prompt_file: "file_specialist_prompt.md"
+    description: "Performs file system operations like read, write, and list directories using a Pydantic schema. Write operations are protected by a safety lock."
+    root_dir: "./workspace" # Defaults to a 'workspace' folder in the project root.
 
   # --- Data & Analysis ---
   data_extractor_specialist:
