--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ llm_providers:
     # Uses the LMSTUDIO_BASE_URL from your .env file
     # Example: LMSTUDIO_BASE_URL=http://localhost:1234/v1
     type: "lmstudio"
-    api_identifier: "lmstudio-community/gpt-oss-20b-gguf/router-gpt-oss-20b-mxfp4.gguf" # The model identifier for the server.
+    api_identifier: "router-gpt-oss-20b" # The model identifier for the server.
     # The model's total context window (input + output). This value is used by the llm
     # adapter to proactively prune the conversation history to prevent context overflow errors.
     context_window: 4096
@@ -35,7 +35,7 @@ llm_providers:
     # Uses the LMSTUDIO_BASE_URL from your .env file
     # Example: LMSTUDIO_BASE_URL=http://localhost:1234/v1
     type: "lmstudio"
-    api_identifier: "gpt-oss-20b" # The model identifier for the server.
+    api_identifier: "gemma-3-27b-it-abliterated@q8_0" # The model identifier for the server.
     # The model's total context window (input + output).
     context_window: 8192
     # Parameters to pass to the model's API.
@@ -145,12 +145,11 @@ specialists:
     prompt_file: "prompt_specialist_prompt.md"
     description: "A general-purpose specialist for direct Q&A and instruction following. Use this as a fallback when no other specialist seems appropriate for the user's request."
 
-  # --- Wrapped & External Specialists ---
+  # --- Procedural Specialists with External Dependencies ---
   open_interpreter_specialist:
-    type: "wrapped_code"
-    wrapper_path: "./external_agents/OpenInterpreter/open_interpreter_wrapper.py" # Path to the wrapper class file, relative to the project root.
-    class_name: "OpenInterpreterAgent" # The name of the class to instantiate from the source file.
+    type: "procedural"
     description: "Executes shell commands and code (Python, etc.) to perform file system operations (list, read, write), data analysis, or web research. This is the primary tool for interacting with the local machine's files and running scripts."
+    external_llm_provider_binding: "lmstudio_router" # Binds open-interpreter to a specific LLM config.
 
   archiver_specialist:
     type: "procedural"
