Engineering open_interpreter_specialist back-end LLM support. Refactor specialists to accept configuration parameters in constructors; update documentation and configuration files to enhance clarity and modularity. Introduce artifact requirements and providers for improved dependency management.

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,16 @@
 # Copy this file to .env and fill in the required values.
 
 # Required for Google Gemini. Your API key for the Google AI platform.
+# Used by the 'gemini_pro' and 'gemini_flash' providers in config.yaml.
 GOOGLE_API_KEY="your-google-api-key"
 
 # Required for LM Studio. The base URL for your local LM Studio server.
+# Used by the 'lmstudio_router' and 'lmstudio_specialist' providers in config.yaml.
 LMSTUDIO_BASE_URL="http://localhost:1234/v1"
 # LMSTUDIO_TIMEOUT=180
 
 # Required for Ollama. The base URL for your local Ollama server.
+# Used by the 'local_ollama' provider in config.yaml.
 OLLAMA_BASE_URL="http://localhost:11434"
 
 # Overrides the default location for run reports.
